# ogma

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: database.rs  main.rs  models.rs  scraper.rs
templates/: layout.html
templates/partials/: dashboard.html  dids.html  history.html  scrapers.html  settings.html
