[package]
name = "oghma"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core framework dependencies

# Web framework

# HTTP client

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = { version = "2.0.1", features = ["serde"] }

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# CLI tools
clap = "4.5.40"

fjall = "2.11.0"

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
axum = { version = "0.8.4", features = ["macros"] }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
derive_more = { version = "2.0.1", features = ["full"] }
iroh = "0.35.0"


anyhow = "1.0.98"
iroh-base = "0.35.0"
iroh-blobs = { version = "0.35.0", features = ["rpc"] }
futures-lite = "2.6.0"
futures = "0.3.31"
askama = { version = "0.14.0", features = ["full"] }
askama-filters = "0.1.3"
hex = "0.4.3"
